--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.510.0",
     "react": "^19.0.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.2",
